erDiagram
    USERS {
        INT user_id PK
        VARCHAR username
        VARCHAR email
        VARCHAR password_hash
        DATETIME registration_date
        VARCHAR last_visit_ip
        VARCHAR role "NULL | USERS | CSR | ADMIN | DEVELOPER"
        VARCHAR status "ONLINE | OFFLINE"
        VARCHAR permission "ACTIVE | DEACTIVE | DELETED"
    }
    FRIENDSHIP {
        INT friendship_id PK
        INT sender_id FK
        INT receiver_id FK
        DATETIME created_at
        VARCHAR status "PENDING | ACCEPTED | DECLINED"
    }

    USERS ||--o{ FRIENDSHIP : sends
    USERS ||--o{ FRIENDSHIP : receives
